Core code for formatModuleCacheContent
Implement formatModuleCacheContent procedure. findModules procedure is
first called to get all files from designated modulepath directory. A
cache entry is made for each result obtained from findModules with
cache file commands: modulefile-content, modulerc-content and
modulefile-invalid.

Goal is to record all information produced by findModules to be able to
replace findModules processing by cache file evaluation. Thus modulefile
modification time and validity check issues are recorded in cache file.

Modulerc and modulefile content is read and recorded as-is in cache
file. Error occurring during file read is raised and ends cache file
creation.

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -2377,7 +2377,7 @@ proc findModules {dir mod depthlvl fetch_mtime} {
                   set mod_list($modulename) [list modulerc]
                }
             }
-            *~ - *,v - \#*\# { }
+            .modulecache - *~ - *,v - \#*\# { }
             default {
                # skip modfile in no in depth mode search if it does not relate
                # to targeted depth level and one valid modfile has already be
