Add major.minor version number in cache files
Append major.minor version number to the #%Module header prefix of
generated cache files. Cache file can be used only if generated for the current
release of Modules used.

Change cache.tcl into cache.tcl.in to get Modules release number
resolved at build time.

--- a/tcl/cache.tcl.in
+++ b/tcl/cache.tcl.in
@@ -72,7 +72,8 @@ proc formatModuleCacheContent {modpath} {
 
    # prepend header if some content has been generated
    if {[string length $content] != 0} {
-      set content "#%Module$content"
+      regexp {^\d+\.\d+} {@MODULES_RELEASE@} majmin
+      set content "#%Module$majmin$content"
    }
 
    return $content
