--- a/tcl/cache.tcl.in
+++ b/tcl/cache.tcl.in
@@ -85,11 +85,81 @@ proc execute-cachefile {cachefile modpath} {
    lappendState modulepath $modpath
    lappendState debug_msg_prefix "\[cache:$cachefile\] "
 
-   #FIXME: create cache file evaluation interp
+   # initialize cache gathering structure for modulepath
+   set ::g_cacheModpath($modpath) {}
 
-   #FIXME: evaluate cache file
+   # initialize cache file evaluation interp configuration
+   if {![info exists ::g_cachefileUntrackVars]} {
+      # list variable that should not be tracked for saving
+      array set ::g_cachefileUntrackVars [list ModulesCurrentCachefile 1\
+         cachecontent 1 env 1]
 
-   set exec_res 0
+      # commands that should be renamed before aliases setup
+      array set ::g_cachefileRenameCmds [list]
+
+      # list interpreter alias commands to define
+      array set ::g_cachefileAliases [list modulefile-content\
+         modulefile-content modulerc-content modulerc-content\
+         modulefile-invalid modulefile-invalid reportInternalBug\
+         reportInternalBug readModuleContent readModuleContent\
+         formatErrStackTrace formatErrStackTrace]
+
+      # alias commands where an argument should be passed
+      array set ::g_cachefileAliasesPassArg [list]
+
+      # trace commands that should be associated to aliases
+      array set ::g_cachefileAliasesTraces [list]
+
+   }
+   set itrp __cachefile
+
+   reportTrace '$cachefile' {Evaluate cache file}
+   # create cachefile interpreter at first interpretation
+   if {![interp exists $itrp]} {
+      reportDebug "creating interp $itrp"
+      interp create $itrp
+
+      # dump initial interpreter state to restore it before each cachefile
+      # interpretation.
+      dumpInterpState $itrp g_cachefileVars g_cachefileArrayVars\
+         g_cachefileUntrackVars g_cachefileProcs
+
+      # interp has just been created
+      set fresh 1
+   } else {
+      set fresh 0
+   }
+
+   # reset interp state command before each interpretation
+   resetInterpState $itrp $fresh g_cachefileVars g_cachefileArrayVars\
+      g_cachefileUntrackVars g_cachefileProcs g_cachefileAliases\
+      g_cachefileAliasesPassArg g_cachefileAliasesTraces\
+      g_cachefileRenameCmds g_cachefileCommands
+
+   # reset modulefile-specific variable before each interpretation
+   interp eval $itrp set ::ModulesCurrentCachefile "{$cachefile}"
+
+   # evaluate cache file
+   ##nagelfar ignore +4 Suspicious # char
+   set exec_res [interp eval $itrp {
+      set cachecontent [readModuleContent $::ModulesCurrentCachefile 1]
+      if {$cachecontent eq {}} {
+         # simply skip cache file, no exit on error here
+         return 0
+      }
+
+      info script $::ModulesCurrentCachefile
+      if {[catch {eval $cachecontent} errorMsg]} {
+         # format stack trace to report cachefile information only
+         reportInternalBug [formatErrStackTrace $::errorInfo\
+            $::ModulesCurrentCachefile [list {*}[info procs] {*}[info\
+            commands]]] {} {Cache ERROR}
+         return 0
+      } else {
+         return 1
+      }
+   }]
+
    reportDebug "exiting $cachefile (result=$exec_res)"
 
    lpopState debug_msg_prefix
