--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -681,9 +681,11 @@ proc initInterpCommands {itrp fresh aliasesVN aliasesPassArgVN tracesVN\
          interp alias $itrp reportTraceExecEnter {} reportTraceExecEnter
          foreach alias [array names aliases] {
             # exclude internal commands expoxed to modulerc/file interpreter
+            # exclude cachefile commands
             if {$alias ni {report reportDebug reportError reportWarning\
                reportCmdTrace raiseErrorCount reportInternalBug\
-               formatErrStackTrace isVerbosityLevel}} {
+               formatErrStackTrace isVerbosityLevel modulefile-content\
+               modulerc-content modulefile-invalid}} {
                interp eval $itrp [list trace add execution $alias enter\
                   reportTraceExecEnter]
             }
