Distinguish empty cache result from no cache result
Update structure of result returned by findModulesInCacheFile to
indicate if cache load was successful or not. It is possible this way to
distinguish between a *there is no cache* result and a *no match in
cache* or *empty cache* results.

--- a/tcl/cache.tcl.in
+++ b/tcl/cache.tcl.in
@@ -215,7 +215,7 @@ proc findModulesInCacheFile {modpath mod depthlvl fetch_mtime} {
 
    # check if cache should be ignored
    if {[currentState commandname] eq {cachebuild}} {
-      return {}
+      return [list 0 {}]
    }
 
    # check if a cache file is available
@@ -229,7 +229,7 @@ proc findModulesInCacheFile {modpath mod depthlvl fetch_mtime} {
 
    # return if no cache file available
    if {!$::g_cachefilesAvail($cachefile)} {
-      return {}
+      return [list 0 {}]
    }
 
    # evaluate cache file if not yet done
@@ -243,7 +243,7 @@ proc findModulesInCacheFile {modpath mod depthlvl fetch_mtime} {
 
    # return if cache file has not been correctly sourced
    if {!$::g_cachefilesSourced($cachefile)} {
-      return {}
+      return [list 0 {}]
    }
 
    # tailor cache file content to what is requested
@@ -285,7 +285,7 @@ proc findModulesInCacheFile {modpath mod depthlvl fetch_mtime} {
    reportDebug "found [array names cache_arr] ([array size cache_arr])"
    set cache_list [array get cache_arr]
 
-   return $cache_list
+   return [list 1 $cache_list]
 }
 
 # ;;; Local Variables: ***
