--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -2319,8 +2319,9 @@ proc findModules {dir mod depthlvl fetch_mtime} {
    }
 
    # look at modulepath cache file
-   set cache_list [findModulesInCacheFile $dir $mod $depthlvl $fetch_mtime]
-   if {[llength $cache_list] > 0} {
+   lassign [findModulesInCacheFile $dir $mod $depthlvl $fetch_mtime] cache_ok\
+      cache_list
+   if {$cache_ok} {
       # record cache file findinds in memory cache
       reportDebug "create cache entry '$searchid'"
       set ::g_foundModulesMemCache($searchid) $cache_list
