--- a/tcl/cache.tcl.in
+++ b/tcl/cache.tcl.in
@@ -250,51 +250,34 @@ proc findModulesInCacheFile {modpath mod depthlvl fetch_mtime} {
    array set cache_arr $::g_cacheModpath($modpath)
    reportDebug "[array size cache_arr] elements are cached for '$modpath'"
 
-   set findall [expr {$mod in {{} *}}]
    # filter entries unless all are requested
-   # exclude if not matching mod pattern (which is always a root name)
-   if {!$findall} {
-      # first create a list of element root name to check, as we need to
-      # compare against root name
+   set findall [expr {$mod in {{} *}}]
+   if {!$findall || $depthlvl > 0} {
+      defineModEqStaticProc [isIcase] [getConf extended_default] $mod
       foreach elt [array names cache_arr] {
          set eltroot [lindex [file split $elt] 0]
-         lappend eltroot_arr($eltroot) $elt
-      }
-      unset -nocomplain eltroot_arr(.modulerc)
-
-      # create a list of non matching element to remove rather checking
-      # elements one by one through modEqStatic: lsearch -glob is enough to
-      # test match (mod is always a root name, could be icased)
-      if {[isIcase]} {
-         set eltroot_list [lsearch -nocase -all -inline -not -glob [array\
-            names eltroot_arr] $mod*]
-      } else {
-         set eltroot_list [lsearch -all -inline -not -glob [array names\
-            eltroot_arr] $mod*]
-      }
-      foreach eltroot $eltroot_list {
-         foreach elt $eltroot_arr($eltroot) {
-            unset cache_arr($elt)
-         }
-      }
-   }
-
-   # exclude if not corresponding to search depth level (or if one modulefile
-   # has already been added for directories lying at other depth level)
-   if {$depthlvl > 0} {
-      foreach elt [array names cache_arr] {
          set eltdepthlvl [llength [file split $elt]]
          set elttail [file tail $elt]
          set eltparent [file dirname $elt]
 
-         if {$elttail ne {.modulerc} && $eltdepthlvl != $depthlvl && [info\
-            exists modfile_indir($eltparent)]} {
+         # exclude if not matching mod pattern (which is always a root name)
+         if {$eltroot ne {.modulerc} && !$findall && ![modEqStatic $eltroot\
+            match]} {
             unset cache_arr($elt)
-         # track a valid non-hidden modulefile has been added in parent dir
-         } elseif {[string index $elttail 0] ne {.} && ![info exists\
-            modfile_indir($eltparent)] && [lindex $cache_arr($elt) 0] eq\
-            {modulefile}} {
-            set modfile_indir($eltparent) 1
+         # also exclude if not corresponding to search depth level (or if one
+         # modulefile has already been added for directories lying at other
+         # depth level)
+         } elseif {$depthlvl > 0 && $elttail ne {.modulerc} && $eltdepthlvl\
+            != $depthlvl && [info exists modfile_indir($eltparent)]} {
+            unset cache_arr($elt)
+         } else {
+            # track a valid non-hidden modulefile has been added in parent
+            # directory
+            if {[string index $elttail 0] ne {.} && ![info exists\
+               modfile_indir($eltparent)] && [lindex $cache_arr($elt) 0] eq\
+               {modulefile}} {
+               set modfile_indir($eltparent) 1
+            }
          }
       }
    }
