Enable mcookie_check/mcookie_version_check on cachebuild
Enable both mcookie_check and mcookie_version_check configuration
options when recording cache. These two options are not honored when
building or using cache.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2878,6 +2878,10 @@ proc cmdModuleCachebuild {args} {
       set modpath_list [getModulePathList exiterronundef]
    }
 
+   # record cache with module header check options enabled
+   setConf mcookie_check always
+   setConf mcookie_version_check 1
+
    foreach modpath $modpath_list {
       set cachefile [getModuleCacheFilename $modpath]
       # set a record message unique id and record cachefile title
