Add ignore_cache configuration option
Add ignore_cache configuration option that controls whether or not
module cache file should be considered if available. Disabled by
default. When configuration is modified it sets the MODULES_IGNORE_CACHE
environment variable.

--ignore-cache command line switch can be used to enable ignore_cache
for the current execution.

--ignore_cache is also supported for compatibility with Lmod.

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -83,6 +83,7 @@ array set g_config_defs [list\
    editor {MODULES_EDITOR {@editor@} 0 {} {} initConfEditor}\
    home {MODULESHOME {@moduleshome@} 0}\
    icase {MODULES_ICASE @icase@ 0 {never search always}}\
+   ignore_cache {MODULES_IGNORE_CACHE 0 0 {0 1}}\
    ignored_dirs {{} {CVS RCS SCCS .svn .git .SYNC .sos} 0}\
    implicit_requirement {MODULES_IMPLICIT_REQUIREMENT @implicitrequirement@ 0\
       {0 1}}\
