--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -1023,6 +1023,9 @@ if {[catch {
             -i - --icase {
                set asked_icase always
             }
+            --ignore-cache - --ignore_cache {
+               set asked_ignore_cache 1
+            }
             --timer {
                setState timer 1
                set timer_start [clock microseconds]
