--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1773,7 +1773,7 @@ See 'module --help' to get available commands and options.}
 
 proc reportUsage {} {
    reportVersion
-   ##nagelfar ignore #108 Too long line
+   ##nagelfar ignore #109 Too long line
    report {Usage: module [options] [command] [args ...]
 
 Loading / Unloading commands:
@@ -1867,6 +1867,7 @@ Switches:
   --tag=LIST      Apply tag to loading module on 'load', 'try-load', 'load-any'
                   or 'switch' sub-commands (LIST is made of tag names
                   separated by ':')
+  --ignore-cache  Ignore module cache
 
 Options:
   -h | --help     This usage info
