Ignore cache file when ignore_cache enabled
Do not check or evaluate cache file if ignore_cache option is enabled.

Use this new option in cachebuild sub-command to ignore cache when
building cache files.

--- a/tcl/cache.tcl.in
+++ b/tcl/cache.tcl.in
@@ -214,7 +214,7 @@ proc findModulesInCacheFile {modpath mod depthlvl fetch_mtime} {
    set cachefile [getModuleCacheFilename $modpath]
 
    # check if cache should be ignored
-   if {[currentState commandname] eq {cachebuild}} {
+   if {[getConf ignore_cache]} {
       return [list 0 {}]
    }
 
