--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2882,6 +2882,9 @@ proc cmdModuleCachebuild {args} {
    setConf mcookie_check always
    setConf mcookie_version_check 1
 
+   # ignore cache when building cache
+   setConf ignore_cache 1
+
    foreach modpath $modpath_list {
       set cachefile [getModuleCacheFilename $modpath]
       # set a record message unique id and record cachefile title
