--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -73,6 +73,8 @@ array set g_config_defs [list\
       dirwsym sym tag key} {} {} eltlist}\
    avail_terse_output {MODULES_AVAIL_TERSE_OUTPUT {@availterseoutput@} 0\
       {modulepath alias dirwsym sym tag key} {} {} eltlist}\
+   cache_buffer_bytes {MODULES_CACHE_BUFFER_BYTES 32768 0 {4096 1000000} {}\
+      {} intbe}\
    collection_pin_version {MODULES_COLLECTION_PIN_VERSION 0 0 {0 1}}\
    collection_pin_tag {MODULES_COLLECTION_PIN_TAG 0 0 {0 1}}\
    collection_target {MODULES_COLLECTION_TARGET <undef> 0}\
