--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2902,6 +2902,8 @@ proc cmdModuleCachebuild {args} {
                } else {
                   # record cache content in file
                   set fid [open $cachefile w]
+                  # use defined buffer size to limit num of write system call
+                  fconfigure $fid -buffersize [getConf cache_buffer_bytes]
                   puts $fid $cache
                   close $fid
                }
