--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -75,6 +75,7 @@ array set g_config_defs [list\
       {modulepath alias dirwsym sym tag key} {} {} eltlist}\
    cache_buffer_bytes {MODULES_CACHE_BUFFER_BYTES 32768 0 {4096 1000000} {}\
       {} intbe}\
+   cache_expiry_secs {MODULES_CACHE_EXPIRY_SECS 0 0 {0 31536000} {} {} intbe}\
    collection_pin_version {MODULES_COLLECTION_PIN_VERSION 0 0 {0 1}}\
    collection_pin_tag {MODULES_COLLECTION_PIN_TAG 0 0 {0 1}}\
    collection_target {MODULES_COLLECTION_TARGET <undef> 0}\
